# RANSAC-L-Shape-Fitting

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
evaluation/: bias.txt
include/: ransac_Lshape_fitting.h
include/ransac_lib/: line_estimator.h  ransac.h
launch/: ransac_lshape_fitting.launch  run.launch  run_rviz.launch
nodes/ransac_lshape_fitting/: ransac_Lshape_fitting.cpp  ransac_Lshape_fitting_node.cpp
rviz/: ransac_l_shape_fitting.rviz
src/: line_estimator.cc  ransac_Lshape_fitting.cpp
